refractory user model

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,13 +1,17 @@
-<form action="signin" method="post">
+<form action="signup" method="post">
     <div>
         <label for="netid">NetID</label>
         <input type="text" name="netid" id="netid" required>
+    </div>
+    <div>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" required>
     </div>
     <div>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required>
     </div>
     <div>
-        <input type="submit" value="Sign in">
+        <input type="submit" value="Sign up">
     </div>
 </form>
