--- a/templates/board.html
+++ b/templates/board.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Board</title>
-</head>
-<body>
-    This is board.
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block body %}
+    <p>This is board.</p>
+{% endblock %}
