--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+
+{% block body %}
 <form action="signup" method="post">
     <div>
         <label for="netid">NetID</label>
@@ -15,3 +18,4 @@
         <input type="submit" value="Sign up">
     </div>
 </form>
+{% endblock %}
