--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CoCornell</title>
-</head>
-<body>
-    <p>Hello CoCornell!</p>
-    <a href="signin">Sign in</a>
-    <a href="signup">Sign up</a>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block body %}
+    <p>This is index.</p>
+{% endblock %}
