--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,13 +1,17 @@
-<form action="signin" method="post">
-    <div>
-        <label for="netid">NetID</label>
-        <input type="text" name="netid" id="netid" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
-    </div>
-    <div>
-        <input type="submit" value="Sign in">
-    </div>
-</form>
+{% extends "layout.html" %}
+
+{% block body %}
+    <form action="signin" method="post">
+        <div>
+            <label for="netid">NetID</label>
+            <input type="text" name="netid" id="netid" required>
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" required>
+        </div>
+        <div>
+            <input type="submit" value="Sign in">
+        </div>
+    </form>
+{% endblock %}
