--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="/board">Board<span class="sr-only">(current)</span></a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                     <form class="navbar-form navbar-left" role="search">
