--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,10 +7,15 @@
         <title>Co-Cornell</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">-->
+        <!--this will cause the style be not flat.-->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
+
+        {% block head %}{% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -22,13 +27,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Co-Cornell</a>
+                    <a class="navbar-brand" href="/">Co-Cornell</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/board">Board<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">About</a></li>
+                        <li class="board"><a href="/board">Board<span class="sr-only">(current)</span></a></li>
+                        <li class="about"><a href="#">About</a></li>
                     </ul>
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
@@ -62,20 +67,24 @@
             </div><!-- /.container-fluid -->
         </nav>
 
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="alert">
-                <ul class="flashes">
-                {% for message in messages %}
-                  <li>{{ message }}</li>
-                {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
-        {% endwith %}
+        <div class="container">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="alert">
+                    <ul class="flashes">
+                    {% for message in messages %}
+                        <div class="alert alert-danger" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+            {% endwith %}
 
-        {% block body %}
 
-        {% endblock %}
+            {% block body %}{% endblock %}
+        </div>
+
     </body>
 </html>
