--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,17 +1,30 @@
 {% extends "layout.html" %}
 
 {% block body %}
-    <form action="signin" method="post">
-        <div>
-            <label for="netid">NetID</label>
-            <input type="text" name="netid" id="netid" required>
+<form class="form-horizontal" action="signin" method="post">
+    <div class="form-group">
+        <label for="netid" class="col-sm-2 control-label">NetID</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" name="netid" id="netid" required>
         </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" required>
+    </div>
+    <div class="form-group">
+        <label for="password" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-6">
+            <input type="password" class="form-control" name="password" id="password" required>
         </div>
-        <div>
-            <input type="submit" value="Sign in">
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+            <div class="checkbox">
+                <label><input type="checkbox" name="remember_me"> Remember me</label>
+            </div>
         </div>
-    </form>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+            <button type="submit" class="btn btn-default">Sign in</button>
+        </div>
+    </div>
+</form>
 {% endblock %}
