--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,21 +1,29 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form action="signup" method="post">
-    <div>
-        <label for="netid">NetID</label>
-        <input type="text" name="netid" id="netid" required>
+<form class="form-horizontal" action="signup" method="post">
+    <div class="form-group">
+        <label for="netid" class="col-sm-2 control-label">NetID</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" name="netid" id="netid" required>
+        </div>
     </div>
-    <div>
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" required>
+    <div class="form-group">
+        <label for="name" class="col-sm-2 control-label">Name</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" name="name" id="name" required>
+        </div>
     </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
+    <div class="form-group">
+        <label for="password" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-6">
+            <input type="password" class="form-control" name="password" id="password" required>
+        </div>
     </div>
-    <div>
-        <input type="submit" value="Sign up">
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+            <button type="submit" class="btn btn-default">Sign up</button>
+        </div>
     </div>
 </form>
 {% endblock %}
