--- a/static/css/layout.scss
+++ b/static/css/layout.scss
@@ -3,9 +3,9 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  transition: background-color 5000s ease-in-out 0s; }
+  transition: background-color 5000s ease-in-out 0s;
+}
 
 body {
-  margin: 0; }
-
-/*# sourceMappingURL=layout.css.map */
+  margin: 0;
+}
