--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta charset="UTF-8">
 
         <title>Co-Cornell</title>
@@ -55,7 +56,7 @@
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#">Separated link</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li id="signout"><a href="/signout">Sign out</a></li>
+                                <li id="signout"><a href="/signout/">Sign out</a></li>
                             </ul>
                         </li>
                     {% else %}
