--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form class="form-horizontal" action="signin" method="post">
+<form class="form-horizontal" action="/signin/" method="post">
     <div class="form-group">
         <label for="netid" class="col-sm-2 control-label">NetID</label>
         <div class="col-sm-6">
