--- a/templates/board_page.html
+++ b/templates/board_page.html
@@ -1,5 +1,11 @@
 {% extends "layout.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/board_page.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dragula.min.css') }}">
+{% endblock %}
+
+
 {% block body %}
 <div>
     {% for list in lists %}
@@ -13,9 +19,35 @@
     {% endfor %}
 </div>
 
-<form action="/list" method="post">
+<form action="/list/" method="post">
     <input type="text" name="name" required>
     <input type="submit" value="Add List">
 </form>
 
+<div class='examples'>
+    <div class='parent'>
+        <label>Move stuff between these two containers. Note how the stuff gets inserted near the mouse pointer? Great stuff.</label>
+        <div class='wrapper'>
+            <div id='left-defaults' class='container'>
+                <div>You can move these elements between these two containers</div>
+                <div>Moving them anywhere else isn't quite possible</div>
+                <div>
+                    Anything can be moved around. That includes images, <a href='https://github.com/bevacqua/dragula'>links</a>, or any other nested elements.
+                </div>
+            </div>
+            <div id='right-defaults' class='container'>
+                <div>There's also the possibility of moving elements around in the same container, changing their position</div>
+                <div>This is the default use case. You only need to specify the containers you want to use</div>
+                <div>More interactive use cases lie ahead</div>
+                <div>Moving <code>&lt;input/&gt;</code> elements works just fine. You can still focus them, too. <input placeholder='See?' /></div>
+                <div>Make sure to check out the <a href='https://github.com/bevacqua/dragula#readme'>documentation on GitHub!</a></div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block js %}
+<script src="{{ url_for('static', filename='js/dragula.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/example.min.js') }}"></script>
 {% endblock %}
