--- a/templates/layout.html
+++ b/templates/layout.html
@@ -83,9 +83,9 @@
             {% endif %}
             {% endwith %}
 
-
             {% block body %}{% endblock %}
         </div>
 
+    {% block js %}{% endblock %}
     </body>
 </html>
