--- a/static/css/layout.scss
+++ b/static/css/layout.scss
@@ -7,5 +7,17 @@ input:-webkit-autofill:active {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+}
+
+html, body {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
 }
