--- a/templates/board.html
+++ b/templates/board.html
@@ -9,17 +9,38 @@
 <div class="row">
     {% for board in boards %}
     <div class="boards col-md-4 col-xs-18">
-        <div class="board alert alert-success" id="board{{board.id}}" role="alert">
+        <div class="board" id="board{{board.id}}" role="alert">
             <p>{{ board.name }}</p>
         </div>
     </div>
     {% endfor %}
+
+    <div class="boards col-md-4 col-xs-18">
+        <div class="board" data-toggle="modal" data-target="#myModal">
+            <p>Create new board</p>
+        </div>
+    </div>
 </div>
 
-
-<form action="/board" method="post">
-    <input type="text" name="name" required>
-    <input type="submit" value="Add">
-</form>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Create new board</h4>
+            </div>
+            <form action="/board/" method="post">
+                <div class="modal-body">
+                    <label for="name">Title</label>
+                    <input type="text" name="name" id="name" required>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Create</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
