--- a/static/css/board_page.css
+++ b/static/css/board_page.css
@@ -1,3 +1,13 @@
+div.list {
+  float: left;
+  width: 250px;
+  min-height: 150px;
+  max-height: 300px;
+  background-color: #86989B;
+  margin: 1em; }
 
+form#add_list {
+  clear: left;
+  margin: 1em; }
 
 /*# sourceMappingURL=board_page.css.map */
