--- a/static/css/board_page.css
+++ b/static/css/board_page.css
@@ -1,13 +1,40 @@
-div.list {
-  float: left;
-  width: 250px;
-  min-height: 150px;
-  max-height: 300px;
-  background-color: #86989B;
-  margin: 1em; }
-
-form#add_list {
-  clear: left;
-  margin: 1em; }
+div.main_board {
+  overflow: -moz-scrollbars-horizontal;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  width: 98%;
+  height: 85vh;
+  margin: auto; }
+  div.main_board div.list {
+    display: inline-block;
+    width: 250px;
+    height: 95%;
+    background-color: #e2e4e6;
+    margin-left: 1em;
+    border-radius: 3px; }
+    div.main_board div.list div.head {
+      height: 50px;
+      padding-left: 10px; }
+    div.main_board div.list div.main {
+      overflow: scroll;
+      overflow: -moz-scrollbars-vertical;
+      height: 78%;
+      padding-bottom: 8px; }
+      div.main_board div.list div.main div.card {
+        border-radius: 3px;
+        background: #FFFFFF;
+        width: 90%;
+        height: 45px;
+        margin: auto auto 8px; }
+    div.main_board div.list div.add {
+      height: 20%; }
+      div.main_board div.list div.add form#add_card {
+        width: 90%;
+        margin: auto; }
+        div.main_board div.list div.add form#add_card input.content {
+          width: 100%; }
+        div.main_board div.list div.add form#add_card input.add {
+          display: none; }
 
 /*# sourceMappingURL=board_page.css.map */
