--- a/static/css/layout.scss
+++ b/static/css/layout.scss
@@ -8,9 +8,30 @@ input:-webkit-autofill:active {
 
 body {
   margin: 0 auto;
+
+  div.container {
+    margin: 0;
+    width: 100%;
+  }
+
+  ::-webkit-scrollbar {
+    height: 20px;
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #d3d3d3;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+  }
+
+  ::-webkit-scrollbar-corner {
+    background-color: #e2e4e6; // should be same with background-color
+  }
 }
 
 html, body {
+  height: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
