--- a/templates/board_page.html
+++ b/templates/board_page.html
@@ -8,25 +8,41 @@
 
 
 {% block body %}
-{% for list in lists %}
-<div class="list">
-    <p>This is list {{ list.id}}: {{ list.name }}.</p>
-    <ul>
-        {% for card in list.get_cards_by_list_id(list.id) %}
-            <li>{{ card.content }}</li>
-        {% endfor%}
+<div class="main_board">
 
-        <form action="/card/{{list.id}}/" method="post" id="add_card">
-            <input type="text" name="content" id="content">
-            <input type="submit" value="Add card">
-        </form>
-    </ul>
-</div>
-{% endfor %}
+    {% for list in lists %}
+    <div class="list">
+        <div class="head">
+            <h4>{{ list.name }}</h4>
+        </div>
+        <div class="main">
+            {% for card in list.get_cards_by_list_id(list.id) %}
+                <div class="card">{{ card.content }}</div>
+            {% endfor%}
+        </div>
+        <div class="add">
+            <form action="/card/{{list.id}}/" method="post" id="add_card">
+                <input class="content" type="text" name="content" id="content" placeholder="Append a card...">
+                <input class="add" type="submit" value="Add card">
+            </form>
+        </div>
+    </div>
+    {% endfor %}
 
-<form action="/list/" method="post" id="add_list">
-    <input type="text" name="name" required>
-    <input type="submit" value="Add List">
-</form>
+    <div class="list">
+        <div class="head">
+            <h4></h4>
+        </div>
+        <div class="main">
+        </div>
+        <div class="add">
+            <form action="/list/" method="post" id="add_list">
+                <input type="text" name="name" required>
+                <input type="submit" value="Add list">
+            </form>
+        </div>
+    </div>
 
+
+</div><!--div.main_board-->
 {% endblock %}
