--- a/static/css/board_page.scss
+++ b/static/css/board_page.scss
@@ -49,6 +49,15 @@ div.main_board {
         p.content {
           margin-left: 10px;
           padding-top: 3px;
+          width: 80%;
+        }
+
+        p span.delete {
+          width: 10%;
+          display: inline-block;
+          float: right;
+          text-align: center;
+          cursor: pointer;
         }
       }
     }
@@ -59,6 +68,10 @@ div.main_board {
       form#add_card {
         width: 90%;
         margin: auto;
+
+        input.add_card {
+          display: none;
+        }
 
         input.content {
           width: 100%;
