--- a/static/css/board_page.css
+++ b/static/css/board_page.css
@@ -10,6 +10,7 @@ div.main_board {
     display: inline-block;
     width: 250px;
     height: 95%;
+    min-height: 400px;
     background-color: #e2e4e6;
     margin-left: 1em;
     border-radius: 3px; }
@@ -35,6 +36,8 @@ div.main_board {
         height: 45px;
         margin: auto auto 8px; }
         div.main_board div.list div.main div.card p.content {
+          overflow-y: scroll;
+          overflow-x: auto;
           margin-left: 10px;
           padding-top: 3px;
           width: 80%; }
@@ -46,14 +49,21 @@ div.main_board {
           cursor: pointer; }
     div.main_board div.list div.add {
       height: 20%; }
-      div.main_board div.list div.add form#add_card {
+      div.main_board div.list div.add form.add_card {
         width: 90%;
         margin: auto; }
-        div.main_board div.list div.add form#add_card input.add_card {
+        div.main_board div.list div.add form.add_card input.add_card {
           display: none; }
-        div.main_board div.list div.add form#add_card input.content {
+        div.main_board div.list div.add form.add_card input.content {
           width: 100%; }
-        div.main_board div.list div.add form#add_card input.add {
+        div.main_board div.list div.add form.add_card input.add {
           display: none; }
+  div.main_board div.list:last-of-type {
+    background-color: inherit;
+    padding-top: 0;
+    margin-top: 0; }
+    div.main_board div.list:last-of-type form.add_list {
+      margin-top: 0;
+      padding-top: 0; }
 
 /*# sourceMappingURL=board_page.css.map */
