--- a/static/css/board_page.scss
+++ b/static/css/board_page.scss
@@ -41,6 +41,12 @@ div.main_board {
       height: 78%;
       padding-bottom: 8px;
 
+      img.image {
+        width: 90%;
+        margin-left: 5%;
+        margin-bottom: 8px;
+      }
+
       div.card {
         border-radius: 3px;
         background: #FFFFFF;
