--- a/static/css/board_page.scss
+++ b/static/css/board_page.scss
@@ -45,6 +45,7 @@ div.main_board {
         width: 90%;
         margin-left: 5%;
         margin-bottom: 8px;
+        cursor: pointer;
       }
 
       div.card {
