--- a/static/css/board_page.css
+++ b/static/css/board_page.css
@@ -4,18 +4,25 @@ div.main_board {
   overflow-y: hidden;
   white-space: nowrap;
   width: 98%;
-  height: 85vh;
-  margin: auto; }
+  height: 86vh;
+  margin: auto;
+  /*div.list:last-of-type {
+    background-color: inherit;
+    padding-top: 0;
+    margin-top: 0;
+
+
+  }*/ }
   div.main_board div.list {
     display: inline-block;
     width: 250px;
-    height: 95%;
+    height: 92%;
     min-height: 400px;
     background-color: #e2e4e6;
     margin-left: 1em;
     border-radius: 3px; }
     div.main_board div.list div.head {
-      height: 50px;
+      height: 40px;
       padding-left: 10px; }
       div.main_board div.list div.head h4 span.delete {
         float: right;
@@ -34,6 +41,10 @@ div.main_board {
         margin-left: 5%;
         margin-bottom: 8px;
         cursor: pointer; }
+      div.main_board div.list div.main div.modal div.modal-body {
+        white-space: normal; }
+        div.main_board div.list div.main div.modal div.modal-body img.modal-image {
+          width: 100%; }
       div.main_board div.list div.main div.card {
         border-radius: 3px;
         background: #FFFFFF;
@@ -52,6 +63,8 @@ div.main_board {
           float: right;
           text-align: center;
           cursor: pointer; }
+        div.main_board div.list div.main div.card p span.delete:hover {
+          color: #0067a3; }
     div.main_board div.list div.add {
       height: 20%; }
       div.main_board div.list div.add form.add_card {
@@ -63,12 +76,29 @@ div.main_board {
           width: 100%; }
         div.main_board div.list div.add form.add_card input.add {
           display: none; }
-  div.main_board div.list:last-of-type {
-    background-color: inherit;
-    padding-top: 0;
-    margin-top: 0; }
-    div.main_board div.list:last-of-type form.add_list {
-      margin-top: 0;
-      padding-top: 0; }
+      div.main_board div.list div.add form.upload {
+        margin-top: 3px;
+        margin-left: 5%; }
+        div.main_board div.list div.add form.upload div.file-upload {
+          position: relative;
+          overflow: hidden; }
+          div.main_board div.list div.add form.upload div.file-upload input.upload {
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: 0;
+            padding: 0;
+            font-size: 20px;
+            cursor: pointer;
+            opacity: 0;
+            filter: alpha(opacity=0); }
+  div.main_board form.add_list {
+    margin-left: 1em;
+    margin-top: 10px;
+    padding-top: 0; }
+  div.main_board .clearfix:after {
+    content: "";
+    display: table;
+    clear: both; }
 
 /*# sourceMappingURL=board_page.css.map */
