--- a/static/css/board_page.scss
+++ b/static/css/board_page.scss
@@ -4,21 +4,21 @@ div.main_board {
   overflow-y: hidden;
   white-space: nowrap;
   width: 98%;
-  height: 85vh;
+  height: 86vh;
   margin: auto;
   //box-shadow:6px 6px 6px rgba(20%,20%,40%,0.5),inset 1px 1px 4px 2px rgba(20%,20%,40%,0.5);
 
   div.list {
     display: inline-block;
     width: 250px;
-    height: 95%;
+    height: 92%;
     min-height: 400px;
     background-color: #e2e4e6;
     margin-left: 1em;
     border-radius: 3px;
 
     div.head {
-      height: 50px;
+      height: 40px;
       padding-left: 10px;
 
       h4 {
@@ -48,6 +48,16 @@ div.main_board {
         cursor: pointer;
       }
 
+      div.modal {
+        div.modal-body {
+          white-space: normal;
+
+          img.modal-image {
+            width: 100%;
+          }
+        }
+      }
+
       div.card {
         border-radius: 3px;
         background: #FFFFFF;
@@ -63,12 +73,18 @@ div.main_board {
           width: 80%;
         }
 
-        p span.delete {
-          width: 10%;
-          display: inline-block;
-          float: right;
-          text-align: center;
-          cursor: pointer;
+        p {
+          span.delete {
+            width: 10%;
+            display: inline-block;
+            float: right;
+            text-align: center;
+            cursor: pointer;
+          }
+
+          span.delete:hover {
+            color: #0067a3;
+          }
         }
       }
     }
@@ -90,16 +106,48 @@ div.main_board {
           display: none;
         }
       }
+
+      form.upload {
+        margin-top: 3px;
+        margin-left: 5%;
+
+        div.file-upload {
+          position: relative;
+          overflow: hidden;
+
+          input.upload {
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: 0;
+            padding: 0;
+            font-size: 20px;
+            cursor: pointer;
+            opacity: 0;
+            filter: alpha(opacity=0);
+          }
+        }
+      }
     }
   }
 
-  div.list:last-of-type {
+  form.add_list {
+    margin-left: 1em;
+    margin-top: 10px;
+    padding-top: 0;
+  }
+
+  /*div.list:last-of-type {
     background-color: inherit;
     padding-top: 0;
     margin-top: 0;
-    form.add_list {
-      margin-top: 0;
-      padding-top: 0;
-    }
+
+
+  }*/
+
+  .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
   }
 }
