--- a/static/css/board_page.scss
+++ b/static/css/board_page.scss
@@ -62,12 +62,10 @@ div.main_board {
         border-radius: 3px;
         background: #FFFFFF;
         width: 90%;
-        height: 45px;
         margin: auto auto 8px;
 
         p.content {
-          overflow-y: scroll;
-          overflow-x: auto;
+          white-space: normal;
           margin-left: 10px;
           padding-top: 3px;
           width: 80%;
