--- a/static/css/board.css
+++ b/static/css/board.css
@@ -6,19 +6,22 @@ div.boards div.board {
   border-radius: 3px;
   font-size: 1pc;
   cursor: pointer;
-  max-width: 300px; }
+  max-width: 300px;
+}
 div.boards div.normal {
   background-color: #0067a3;
-  color: #FFF; }
+  color: #FFF;
+}
 div.boards div.new_board {
   background-color: #e2e4e6;
   color: #8c8c8c;
-  padding-top: 25px; }
-  div.boards div.new_board p {
-    text-align: center;
-    height: 20px; }
+  padding-top: 25px;
+}
+div.boards div.new_board p {
+  text-align: center;
+  height: 20px;
+}
 div.boards div.board p {
   padding-left: 15px;
-  padding-top: 5px; }
-
-/*# sourceMappingURL=board.css.map */
+  padding-top: 5px;
+}
