--- a/static/scss/board_page2.scss
+++ b/static/scss/board_page2.scss
@@ -8,6 +8,8 @@ div.main_board {
   margin: auto;
 
   div.allLists {
+    height: 100%;
+
     div.list {
       display: inline-block;
       width: 250px;
