--- a/templates/board_page2.html
+++ b/templates/board_page2.html
@@ -7,9 +7,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.16/browser.js"></script>
 
-<script type="text/babel" src="{{ url_for('static', filename='jsx/board_page.jsx') }}"></script>
+<script src="{{ url_for('static', filename='js/board_page2.js') }}"></script>
 
-<script src="{{ url_for('static', filename='js/board_page.js') }}"></script>
+<script type="text/babel" src="{{ url_for('static', filename='jsx/board_page.jsx') }}"></script>
 {% endblock %}
 
 
